# mcwebapi

./: .gitignore  README.md  main.py  pyproject.toml  setup.py
examples/: README.md
mcwebapi/: __init__.py  __init__.pyi  api.py  api.pyi
mcwebapi/core/: __init__.pyi  client.py  client.pyi  connection.py  connection.pyi  promise.pyi
mcwebapi/objects/: __init__.py  __init__.pyi  base.py  base.pyi  block.py  block.pyi  command.py  command.pyi  entity.py  entity.pyi  level.py  level.pyi  player.py  player.pyi  scoreboard.py  scoreboard.pyi  server.py  server.pyi  world.py
