[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mcwebapi"
dynamic = ["version"]
description = "A Python client for interacting with Minecraft servers via WebSocket API"
authors = [
    {name = "addavriance"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.7"
keywords = ["minecraft", "api", "websocket", "client"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

dependencies = [
    "websocket-client>=1.3.0",
]

[project.urls]
"Homepage" = "https://github.com/addavriance/mcwebapi"
"Bug Tracker" = "https://github.com/addavriance/mcwebapi/issues"